Page Layout Fixes, Polish
Moved "header" into "#page" component on all pages - fixes page scrollbar from shifting page content and misaligning it with header. Change may need to be rolled back depending on how it performs, since page component was already a fix to prevent the Android overscroll animation.

Added Footer to desktop Dashboard layout.

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -13,8 +13,10 @@ header .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  padding-top: 0;
-  padding-bottom: 0;
+  /* override page wrapper rules */
+  font-size: 16px !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
 }
 @media (min-width: 1151px) {
   header .wrapper { 
@@ -31,9 +33,10 @@ header a {
   border-bottom: 3px solid var(--grey-400);
   border-radius: 10px 10px 0 0;
   color: var(--blue-600);
-  text-decoration: none;
   font-weight: normal;
+  font-family: BowlbyOneSC,Arial,Roboto,Helvetica,sans-serif;
   padding: 8px 16px;
+  text-decoration: none;
 }
 header a:hover {
   background: 0;
@@ -92,7 +95,6 @@ header h1 a {
   border: 0;
   border-radius: 0;
   padding: 8px;
-  font-weight: bold; 
 }
 #mobile-header-nav a.active {
   text-decoration: underline;
