--- a/src/pages/Dashboard/index.css
+++ b/src/pages/Dashboard/index.css
@@ -38,13 +38,13 @@
   margin: 0 auto;
 }
 
-.desktop #page.dashboard .wrapper {
+.desktop #page.dashboard > .wrapper {
   width: 100%;
   display: grid;
   grid-template-columns: 250px 1fr auto;
 }
 
-.desktop #page.dashboard .wrapper > * { border-radius: 20px; }
+.desktop #page.dashboard > .wrapper > * { border-radius: 20px; }
 
 .desktop #page.dashboard #combos,
 .desktop #page.dashboard #cog {  
@@ -54,9 +54,9 @@
 .desktop #page.dashboard #toons,
 .desktop #page.dashboard #cog {  
   position: sticky;
-  top: 16px;
+  top: calc(52px + 16px);
   align-self: flex-start;
-  height: calc(100vh - 49px - 36px);
+  height: calc(100vh - 52px - 36px);
   overflow-y: auto;
 }
 
